--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "tss-react": "^4.4.4",
-        "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
@@ -43,5 +42,10 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/cypress": "^8.0.3",
+        "cypress": "^11.0.1",
+        "typescript": "^4.8.4"
     }
 }
