--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "strictNullChecks": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "types": ["cypress", "@testing-library/cypress"]
     },
     "include": ["src"]
 }
